Fixed CSS error with voter registration overflowing the page. Height adjusted to auto for both the form section and container

--- a/play-java-starter-example/public/stylesheets/custom.css
+++ b/play-java-starter-example/public/stylesheets/custom.css
@@ -67,7 +67,7 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    height: 100%;
+    height: auto;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -145,7 +145,6 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    height: 100%;
     padding: 20px;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
@@ -160,7 +159,6 @@
 }
 
 .form-section {
-    height: 100vh;
     background-image: -webkit-linear-gradient(270deg, #403d8a, #403d8a);
     background-image: linear-gradient(180deg, #403d8a, #403d8a);
 }
